# send-notifications-to-slack-from-github

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  entrypoint.sh  prerequisites.md  pyproject.toml  send_slack_alert.py
.github/workflows/: create-release.yml
